--- a/index.html
+++ b/index.html
@@ -4,11 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>HW6</title>
 </head>
 
 <body>
+    <div class="container">
+        <table>
+            <tr>
+                <td colspan="2">1</td>
+                <td colspan="3">3</td>
+                <td colspan="4">6</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td rowspan="2">1</td>
+                <td rowspan="5" colspan="4">2</td>
+                <td colspan="4" rowspan="2">6</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td rowspan="4">1</td>
+                <td rowspan="3" colspan="2">6</td>
 
+                <td rowspan="3" colspan="2">8</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td rowspan="2" colspan="2">2</td>
+                <td colspan="2">4</td>
+                <td colspan="4">6</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td rowspan="3">1</td>
+                <td colspan="2">4</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td colspan="2">2</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <!-- <td colspan="2">2</td> ошибка -->
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+            </tr>
+        </table>
+    </div>
 </body>
 
 </html>
