--- a/index.html
+++ b/index.html
@@ -12,69 +12,53 @@
     <div class="container">
         <table>
             <tr>
-                <td colspan="2">1</td>
-                <td colspan="3">3</td>
-                <td colspan="4">6</td>
-                <td>10</td>
+                <td colspan="2"></td>
+                <td colspan="3"></td>
+                <td colspan="4" class="orange"></td>
+                <td rowspan="7" class="height-525"></td>
             </tr>
-            <tr>
-                <td rowspan="2">1</td>
-                <td rowspan="5" colspan="4">2</td>
-                <td colspan="4" rowspan="2">6</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td rowspan="4">1</td>
-                <td rowspan="3" colspan="2">6</td>
 
-                <td rowspan="3" colspan="2">8</td>
-                <td>10</td>
-            </tr>
             <tr>
-                <td>10</td>
+                <td rowspan="2"></td>
+                <td rowspan="5" colspan="4" class="red"></td>
+                <td colspan="4" rowspan="2" class="orange"></td>
             </tr>
+
             <tr>
-                <td>10</td>
             </tr>
+
             <tr>
-                <td rowspan="2" colspan="2">2</td>
-                <td colspan="2">4</td>
-                <td colspan="4">6</td>
-                <td>10</td>
+                <td rowspan="4"></td>
+                <td rowspan="3" colspan="2"></td>
+                <td rowspan="3" colspan="2"></td>
             </tr>
+
             <tr>
-                <td rowspan="3">1</td>
-                <td colspan="2">4</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-                <td>10</td>
             </tr>
+
             <tr>
-                <td colspan="2">2</td>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-                <td>10</td>
             </tr>
+
             <tr>
-                <!-- <td colspan="2">2</td> ошибка -->
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-                <td>10</td>
+                <td rowspan="2" colspan="2" class="black"></td>
+                <td colspan="2"></td>
+                <td colspan="4"></td>
+            </tr>
+
+            <tr>
+                <td rowspan="3" class="orange"></td>
+                <td colspan="2"></td>
+                <td colspan="4" rowspan="2" class="blue"></td>
+                <td rowspan="3" class="red height-225"></td>
+            </tr>
+
+            <tr>
+                <td colspan="2" rowspan="2" class="width-150"></td>
+                <td colspan="2" class="black"></td>
+            </tr>
+
+            <tr>
+                <td colspan="6" class="width-450"></td>
             </tr>
         </table>
     </div>
